--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -340,8 +340,10 @@ echo ""
 echo -e "${verde} - RESTORE ALIAS -${borra_colores}"
 echo ""
 echo -e "${amarillo} Si el fichero esta en:${borra_colores}"
-echo -e "${amarillo} /home/$(whoami)/backup_alias con el nombre alias_$(whoami).backup.${borra_colores}"
+echo ""
+echo -e " /home/$(whoami)/backup_alias con el nombre alias_$(whoami).backup."
 echo -e "${amarillo} Puedes pulsar Enter directamente, sino introduce la ruta.${borra_colores}"
+echo ""
 read -p " Dime la ruta absoluta del fichero a restaurar: " ruta
 
 if [ $ruta = "ok" ]; then
@@ -362,9 +364,18 @@ if [ $ruta = "ok" ]; then
     fi
 else
     if [ -f "$ruta" ]; then
-        echo -e " El fichero '$ruta' existe y es correcto."; sleep 5
+        echo ""
+        echo -e " Se restaura el backup de alias de:"
+        echo -e " $ruta"
+        cp $ruta /home/$(whoami)/.bash_aliases >/dev/null 2>&1
+        echo ""
+        echo -e "${verde} Reastauracion con exito.${borra_colores}"
     else
-        echo -e " El fichero '$ruta' no existe o no es un fichero válido."; sleep 5
+        echo ""
+        echo -e "${rojo} No hay existe fichero de backup. En la ruta:${borra_colores}"
+        echo -e "${amariollo} $ruta ${borra_colores}"
+        echo -e "${amarillo} Para poder restaurarlo.${borra_colores}"
+        echo ""
     fi
 fi
 echo ""
