--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -180,38 +180,6 @@ echo -e " Alias creado (${verde}$alias_name=$command${borra_colores})."
 echo ""
 }
 
-##borrar_alias
-#borrar_alias(){
-#clear
-#echo ""
-#echo -e "${verde} - BORRAR ALIAS -${borra_colores}"
-## Verificar si el archivo .bash_aliases existe y no está vacío
-#if [ ! -f /home/$(whoami)/.bash_aliases ] || [ ! -s /home/$(whoami)/.bash_aliases ]; then
-#    echo ""
-#    echo -e "${amarillo} No hay alias para mostrar.${borra_colores}"
-#    echo ""
-#else
-#    # Mostrar los aliases disponibles en .bash_aliases
-#    echo ""
-#    echo -e " Alias disponibles de ${verde}$(whoami)${borra_colores}:"
-#    echo ""
-#    grep -oP "alias\s+\K\w+(?=\=)" /home/$(whoami)/.bash_aliases
-#    echo ""
-#
-#    # Pedir al usuario los aliases que desea eliminar, separados por espacio
-#    read -p " Introduce los aliases que quieres eliminar (separados por espacio): " aliases_to_remove
-#    echo ""
-#    # Dividir los aliases ingresados por el usuario en un array
-#    aliases_array=($aliases_to_remove)
-#
-#    # Eliminar cada alias del archivo .bash_aliases
-#    for alias_name in "${aliases_array[@]}"; do
-#        sed -i "/alias $alias_name=/d" /home/$(whoami)/.bash_aliases
-#        echo -e "Alias ${verde}'$alias_name'${borra_colores} eliminado correctamente."
-#    done
-#fi
-#echo ""
-#}
 
 borrar_alias(){
     clear
@@ -254,14 +222,6 @@ borrar_alias(){
 
     echo ""
 }
-
-
-
-
-
-
-
-
 
 #editar_fichero_alias
 editar_fichero_alias(){
@@ -346,7 +306,7 @@ echo -e "${amarillo} Puedes pulsar Enter directamente, sino introduce la ruta.${
 echo ""
 read -p " Dime la ruta absoluta del fichero a restaurar: " ruta
 
-if [ $ruta = "ok" ]; then
+if [ $ruta = "" ]; then
     if [ ! -f /home/$(whoami)/backup_alias/alias_$(whoami).backup ] || [ ! -s /home/$(whoami)/backup_alias/alias_$(whoami).backup ]; then
         echo ""
         echo -e "${rojo} No hay existe fichero de backup.${borra_colores}"
