--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -305,7 +305,7 @@ echo -e "${amarillo} Puedes pulsar Enter directamente, sino introduce la ruta.${
 echo ""
 read -p " Dime la ruta absoluta del fichero a restaurar: " ruta
 
-if [ $ruta = "" ]; then
+if [ -z "$ruta" ]; then
     if [ ! -f /home/$(whoami)/backup_alias/alias_$(whoami).backup ] || [ ! -s /home/$(whoami)/backup_alias/alias_$(whoami).backup ]; then
         echo ""
         echo -e "${rojo} No hay existe fichero de backup.${borra_colores}"
