--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -189,7 +189,8 @@ borrar_alias(){
     local alias_file="/home/$(whoami)/.bash_aliases"
 
     # Verificar si el archivo .bash_aliases existe y no está vacío
-    if [ ! -f "$alias_file" ] || [ ! -s "$alias_file" ]; then
+    if [ grep -oP "alias\s+\K\w+(?=\=)" "$alias_file" ]; then
+    #if [ ! -f "$alias_file" ] || [ ! -s "$alias_file" ]; then
         echo ""
         echo -e "${amarillo} No hay alias para mostrar.${borra_colores}"
         echo ""
@@ -324,7 +325,7 @@ if [ -z "$ruta" ]; then
 else
     if [ -f "$ruta" ]; then
         echo ""
-        echo -e " Se restaura el backup de alias de:"
+        echo -e "${verde} Se restaura el backup de alias de:${borra_colores}"
         echo -e " $ruta"
         cp $ruta /home/$(whoami)/.bash_aliases >/dev/null 2>&1
         echo ""
