--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -296,46 +296,42 @@ echo ""
 
 #restore_alias
 restore_alias(){
+FICHERO="alias_$(whoami).backup"
+BACKUP_DIR="/home/$(whoami)/backup_alias"
+DESTINO="/home/$(whoami)/.bash_aliases"  # destino donde se restaura
+
 clear
 echo ""
 echo -e "${verde} - RESTORE ALIAS -${borra_colores}"
 echo ""
-echo -e "${amarillo} Si el fichero esta en:${borra_colores}"
-echo -e " /home/$(whoami)/backup_alias con el nombre alias_$(whoami).backup."
-echo -e "${amarillo} Puedes pulsar Enter directamente, sino introduce la ruta.${borra_colores}"
-echo ""
-read -p " Dime la ruta absoluta del fichero a restaurar: " ruta
+echo "Buscando copia de seguridad en: $BACKUP_DIR"
 
-if [ -z "$ruta" ]; then
-    if [ ! -f /home/$(whoami)/backup_alias/alias_$(whoami).backup ] || [ ! -s /home/$(whoami)/backup_alias/alias_$(whoami).backup ]; then
-        echo ""
-        echo -e "${rojo} No hay existe fichero de backup.${borra_colores}"
-        echo -e "${amariollo} El fichero de backup tiene que estar en:${borra_colores}"
-        echo -e "${amarillo} /home/$(whoami)/backup_alias con el nombre alias_$(whoami).backup.${borra_colores}"
-        echo -e "${amarillo} Para poder restaurarlo.${borra_colores}"
-        echo ""
-    else
-        echo ""
-        echo -e " Se restaura el backup de alias:"
-        echo -e " /home/$(whoami)/backup_alias"
-        cp /home/$(whoami)/backup_alias/alias_$(whoami).backup /home/$(whoami)/.bash_aliases >/dev/null 2>&1
-        echo ""
-        echo -e "${verde} Reastauracion con exito.${borra_colores}"
-    fi
+# Ruta completa del posible backup
+BACKUP_FILE="$BACKUP_DIR/$FICHERO"
+
+# Verificamos si el backup existe
+if [[ -f "$BACKUP_FILE" ]]; then
+    echo " Copia de seguridad encontrada: $BACKUP_FILE"
+    echo " Restaurando fichero en $DESTINO..."
+    sudo cp "$BACKUP_FILE" "$DESTINO" && echo "✅ Restauración completada."
 else
-    if [ -f "$ruta" ]; then
-        echo ""
-        echo -e "${verde} Se restaura el backup de alias de:${borra_colores}"
-        echo -e " $ruta"
-        cp $ruta /home/$(whoami)/.bash_aliases >/dev/null 2>&1
-        echo ""
-        echo -e "${verde} Reastauracion con exito.${borra_colores}"
+    echo "⚠ No se encontró el backup en $BACKUP_DIR."
+    read -rp " Introduce la ruta completa del fichero de respaldo: " RUTA_USUARIO
+
+    # Comprobamos que la ruta no esté vacía
+    if [[ -z "$RUTA_USUARIO" ]]; then
+        echo " No se introdujo ninguna ruta. Cancelando."
+        exit 1
+    fi
+
+    # Comprobamos si el fichero existe realmente
+    if [[ -f "$RUTA_USUARIO" ]]; then
+        echo " Fichero encontrado en $RUTA_USUARIO"
+        echo " Restaurando fichero en $DESTINO..."
+        sudo cp "$RUTA_USUARIO" "$DESTINO" && echo "✅ Restauración completada."
     else
-        echo ""
-        echo -e "${rojo} No hay existe fichero de backup. En la ruta:${borra_colores}"
-        echo -e "${amariollo} $ruta ${borra_colores}"
-        echo -e "${amarillo} Para poder restaurarlo.${borra_colores}"
-        echo ""
+        echo " Error: el fichero '$RUTA_USUARIO' no existe o la ruta es incorrecta."
+        exit 1
     fi
 fi
 echo ""
