--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -313,7 +313,7 @@ BACKUP_FILE="$BACKUP_DIR/$FICHERO"
 if [[ -f "$BACKUP_FILE" ]]; then
     echo " Copia de seguridad encontrada: $BACKUP_FILE"
     echo " Restaurando fichero en $DESTINO..."
-    sudo cp "$BACKUP_FILE" "$DESTINO" && echo "✅ Restauración completada."
+    cp "$BACKUP_FILE" "$DESTINO" && echo "✅ Restauración completada."
 else
     echo "⚠ No se encontró el backup en $BACKUP_DIR."
     read -rp " Introduce la ruta completa del fichero de respaldo: " RUTA_USUARIO
@@ -328,7 +328,7 @@ else
     if [[ -f "$RUTA_USUARIO" ]]; then
         echo " Fichero encontrado en $RUTA_USUARIO"
         echo " Restaurando fichero en $DESTINO..."
-        sudo cp "$RUTA_USUARIO" "$DESTINO" && echo "✅ Restauración completada."
+        cp "$RUTA_USUARIO" "$DESTINO" && echo "✅ Restauración completada."
     else
         echo " Error: el fichero '$RUTA_USUARIO' no existe o la ruta es incorrecta."
         exit 1
