--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -303,32 +303,67 @@ clear
 echo ""
 echo -e "${verde} - RESTORE ALIAS -${borra_colores}"
 echo ""
-echo "Buscando copia de seguridad en: $BACKUP_DIR"
+echo -e "${azul}Buscando copia de seguridad en:${borra_colores} $BACKUP_DIR"
 
 # Ruta completa del posible backup
 BACKUP_FILE="$BACKUP_DIR/$FICHERO"
 
 # Verificamos si el backup existe
 if [[ -f "$BACKUP_FILE" ]]; then
-    echo " Copia de seguridad encontrada: $BACKUP_FILE"
-    echo " Restaurando fichero en $DESTINO..."
-    cp "$BACKUP_FILE" "$DESTINO" && echo "✅ Restauración completada."
+    echo -e "${verde} Copia de seguridad encontrada:${borra_colores} $BACKUP_FILE"
+    read -rp " Deseas restaurar la copia encontarda? (S/n)" respuesta
+
+    # Convertir a minúsculas
+    respuesta=$(echo "$respuesta" | tr '[:upper:]' '[:lower:]')
+
+    if [[ "$respuesta" == "s" ]]; then
+        echo -e "${amarillo} Restaurando fichero en${borra_colores} $DESTINO"; sleep 2
+        cp "$BACKUP_FILE" "$DESTINO"
+        echo -e "${verde} Restauración completada${borra_colores}"
+
+    elif [[ "$respuesta" == "n" ]]; then
+        read -rp " Introduce la ruta completa del fichero de respaldo: " RUTA_USUARIO
+
+        # Comprobamos que la ruta no esté vacía
+        if [[ -z "$RUTA_USUARIO" ]]; then
+            echo -e "${roja} No se introdujo ninguna ruta. Cancelando${borra_colores}"
+        fi
+
+        # Comprobamos si el fichero existe realmente
+        if [[ -f "$RUTA_USUARIO" ]]; then
+            echo -e "${verde} Fichero encontrado en${borra_colores} $RUTA_USUARIO"; sleep 1
+            echo -e " Restaurando fichero en $DESTINO"; sleep 1
+            cp "$RUTA_USUARIO" "$DESTINO"
+            echo -e "${verde} Restauración completada${borra_colores}"; sleep 2
+        else
+            echo -e "${rojo} Error: el fichero${borra_colores} $RUTA_USUARIO ${rojo}no existe o la ruta es incorrecta${borra_colores}"
+        fi
+
+    elif [[ -z "$respuesta" ]]; then
+        echo -e "${amarillo} No has introducido ninguna respuesta${borra_colores}"
+
+    else
+        echo -e "${amarillo}Respuesta no válida. Debes escribir 's' o 'n'${borra_colores}"
+
+    fi
+
 else
-    echo "⚠ No se encontró el backup en $BACKUP_DIR."
+    echo -e "${amarillo} No se encontró el backup en${borra_colores} $BACKUP_DIR"
     read -rp " Introduce la ruta completa del fichero de respaldo: " RUTA_USUARIO
 
     # Comprobamos que la ruta no esté vacía
     if [[ -z "$RUTA_USUARIO" ]]; then
-        echo " No se introdujo ninguna ruta. Cancelando."
+        echo -e "${roja} No se introdujo ninguna ruta. Cancelando${borra_colores}"
     fi
 
     # Comprobamos si el fichero existe realmente
     if [[ -f "$RUTA_USUARIO" ]]; then
-        echo " Fichero encontrado en $RUTA_USUARIO"
-        echo " Restaurando fichero en $DESTINO..."
-        cp "$RUTA_USUARIO" "$DESTINO" && echo "✅ Restauración completada."
+        echo -e "${verde} Fichero encontrado en${borra_colores} $RUTA_USUARIO"; sleep 1
+        echo -e " Restaurando fichero en $DESTINO"; sleep 1
+        cp "$RUTA_USUARIO" "$DESTINO"
+        echo -e "${verde} Restauración completada${borra_colores}"; sleep 2
     else
-        echo " Error: el fichero '$RUTA_USUARIO' no existe o la ruta es incorrecta."
+        echo -e "${rojo} Error: el fichero${borra_colores} $RUTA_USUARIO ${rojo}no existe o la ruta es incorrecta${borra_colores}"
     fi
 fi
 echo ""
