--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -303,7 +303,7 @@ clear
 echo ""
 echo -e "${verde} - RESTORE ALIAS -${borra_colores}"
 echo ""
-echo -e "${azul}Buscando copia de seguridad en:${borra_colores} $BACKUP_DIR"
+echo -e "${azul} Buscando copia de seguridad en:${borra_colores} $BACKUP_DIR"
 
 # Ruta completa del posible backup
 BACKUP_FILE="$BACKUP_DIR/$FICHERO"
@@ -311,7 +311,8 @@ BACKUP_FILE="$BACKUP_DIR/$FICHERO"
 # Verificamos si el backup existe
 if [[ -f "$BACKUP_FILE" ]]; then
     echo -e "${verde} Copia de seguridad encontrada:${borra_colores} $BACKUP_FILE"
-    read -rp " Deseas restaurar la copia encontarda? (S/n)" respuesta
+    echo ""
+    read -rp " Deseas restaurar la copia encontarda? (S/n) " respuesta
 
     # Convertir a minúsculas
     respuesta=$(echo "$respuesta" | tr '[:upper:]' '[:lower:]')
