--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -323,11 +323,12 @@ if [[ -f "$BACKUP_FILE" ]]; then
         echo -e "${verde} Restauración completada${borra_colores}"
 
     elif [[ "$respuesta" == "n" ]]; then
+        echo ""
         read -rp " Introduce la ruta completa del fichero de respaldo: " RUTA_USUARIO
 
         # Comprobamos que la ruta no esté vacía
         if [[ -z "$RUTA_USUARIO" ]]; then
-            echo -e "${roja} No se introdujo ninguna ruta. Cancelando${borra_colores}"
+            echo -e "${rojo} No se introdujo ninguna ruta. Cancelando${borra_colores}"
         fi
 
         # Comprobamos si el fichero existe realmente
@@ -344,7 +345,7 @@ if [[ -f "$BACKUP_FILE" ]]; then
         echo -e "${amarillo} No has introducido ninguna respuesta${borra_colores}"
 
     else
-        echo -e "${amarillo} Respuesta no válida. Debes escribir 's' o 'n'${borra_colores}"
+        echo -e "${rojo} Respuesta no válida.${amarillo} Debes escribir 's' o 'n'${borra_colores}"
 
     fi
 
