--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -351,6 +351,7 @@ if [[ -f "$BACKUP_FILE" ]]; then
 
 else
     echo -e "${amarillo} No se encontró el backup en${borra_colores} $BACKUP_DIR"
+    echo ""
     read -rp " Introduce la ruta completa del fichero de respaldo: " RUTA_USUARIO
 
     # Comprobamos que la ruta no esté vacía
