--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -356,7 +356,7 @@ else
 
     # Comprobamos que la ruta no esté vacía
     if [[ -z "$RUTA_USUARIO" ]]; then
-        echo -e "${roja} No se introdujo ninguna ruta. Cancelando${borra_colores}"
+        echo -e "${rojo} No se introdujo ninguna ruta. Cancelando${borra_colores}"
     fi
 
     # Comprobamos si el fichero existe realmente
