--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -334,7 +334,7 @@ if [[ -f "$BACKUP_FILE" ]]; then
         # Comprobamos si el fichero existe realmente
         if [[ -f "$RUTA_USUARIO" ]]; then
             echo -e "${verde} Fichero encontrado en${borra_colores} $RUTA_USUARIO"; sleep 1
-            echo -e " Restaurando fichero en $DESTINO"; sleep 1
+            echo -e "${verde} Restaurando fichero en${borra_colores} $DESTINO"; sleep 1
             cp "$RUTA_USUARIO" "$DESTINO"
             echo -e "${verde} Restauración completada${borra_colores}"; sleep 2
         else
@@ -362,7 +362,7 @@ else
     # Comprobamos si el fichero existe realmente
     if [[ -f "$RUTA_USUARIO" ]]; then
         echo -e "${verde} Fichero encontrado en${borra_colores} $RUTA_USUARIO"; sleep 1
-        echo -e " Restaurando fichero en $DESTINO"; sleep 1
+        echo -e "${verde} Restaurando fichero en${borra_colores} $DESTINO"; sleep 1
         cp "$RUTA_USUARIO" "$DESTINO"
         echo -e "${verde} Restauración completada${borra_colores}"; sleep 2
     else
