--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -188,7 +188,7 @@ borrar_alias(){
     local alias_file="/home/$(whoami)/.bash_aliases"
 
     # Verificar si el archivo .bash_aliases existe y no está vacío
-    if grep -oP "alias\s+\K\w+(?=\=)" "$alias_file"; then
+    if $(grep -oP "alias\s+\K\w+(?=\=)" "$alias_file"); then
     #if [ ! -f "$alias_file" ] || [ ! -s "$alias_file" ]; then
         echo ""
         echo -e "${amarillo} No hay alias para mostrar.${borra_colores}"
