--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -180,7 +180,7 @@ echo ""
 }
 
 
-borrar_alias(){
+borrar_aliasbackup(){
     clear
     echo ""
     echo -e "${verde} - BORRAR ALIAS -${borra_colores}"
@@ -222,6 +222,51 @@ borrar_alias(){
 
     echo ""
 }
+
+borrar_alias(){
+    clear
+    echo ""
+    echo -e "${verde} - BORRAR ALIAS -${borra_colores}"
+
+    local alias_file="/home/$(whoami)/.bash_aliases"
+
+    # Verificar si el archivo existe y contiene alias
+    if ! grep -qP "alias\s+\w+=" "$alias_file" 2>/dev/null; then
+        echo ""
+        echo -e "${amarillo} No hay alias para mostrar.${borra_colores}"
+        echo ""
+        return
+    fi
+
+    # Mostrar los aliases disponibles
+    echo ""
+    echo -e " Alias disponibles de ${verde}$(whoami)${borra_colores}:"
+    echo ""
+    grep -oP "alias\s+\K\w+(?=\=)" "$alias_file"
+    echo ""
+
+    # Pedir al usuario los aliases a eliminar
+    read -p " Introduce los aliases que quieres eliminar (separados por espacio): " aliases_to_remove
+    echo ""
+
+    # Convertir en array
+    aliases_array=($aliases_to_remove)
+
+    for alias_name in "${aliases_array[@]}"; do
+        # Verificar si el alias existe
+        if grep -q "^alias $alias_name=" "$alias_file"; then
+            sed -i "/^alias $alias_name=/d" "$alias_file"
+            echo -e "Alias ${verde}'$alias_name'${borra_colores} eliminado correctamente."
+        else
+            echo -e "${rojo}El alias '${alias_name}' no existe.${borra_colores}"
+        fi
+    done
+
+    echo ""
+}
+
+
+
 
 #editar_fichero_alias
 editar_fichero_alias(){
