--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -143,6 +143,17 @@ listar_alias(){
 clear
 echo ""
 echo -e "${verde} - LISTAR ALIAS -${borra_colores}"
+
+local alias_file="/home/$(whoami)/.bash_aliases"
+
+    # Verificar si el archivo existe y contiene alias
+    if ! grep -qP "alias\s+\w+=" "$alias_file" 2>/dev/null; then
+        echo ""
+        echo -e "${amarillo} No hay alias para mostrar.${borra_colores}"
+        echo ""
+        return
+    fi
+
 # Verificar si el archivo .bash_aliases existe y no está vacío
 if [ ! -f /home/$(whoami)/.bash_aliases ] || [ ! -s /home/$(whoami)/.bash_aliases ]; then
     echo ""
@@ -158,7 +169,6 @@ else
     echo -e "${borra_colores}"
 fi
 echo ""
-
 }
 
 
@@ -177,50 +187,6 @@ echo "alias $alias_name='$command'" >> /home/$(whoami)/.bash_aliases
 echo ""
 echo -e " Alias creado (${verde}$alias_name=$command${borra_colores})."
 echo ""
-}
-
-
-borrar_aliasbackup(){
-    clear
-    echo ""
-    echo -e "${verde} - BORRAR ALIAS -${borra_colores}"
-
-    local alias_file="/home/$(whoami)/.bash_aliases"
-
-    # Verificar si el archivo .bash_aliases existe y no está vacío
-    if $(grep -oP "alias\s+\K\w+(?=\=)" "$alias_file"); then
-    #if [ ! -f "$alias_file" ] || [ ! -s "$alias_file" ]; then
-        echo ""
-        echo -e "${amarillo} No hay alias para mostrar.${borra_colores}"
-        echo ""
-        return
-    fi
-
-    # Mostrar los aliases disponibles
-    echo ""
-    echo -e " Alias disponibles de ${verde}$(whoami)${borra_colores}:"
-    echo ""
-    grep -oP "alias\s+\K\w+(?=\=)" "$alias_file"
-    echo ""
-
-    # Pedir al usuario los aliases a eliminar
-    read -p " Introduce los aliases que quieres eliminar (separados por espacio): " aliases_to_remove
-    echo ""
-
-    # Convertir en array
-    aliases_array=($aliases_to_remove)
-
-    for alias_name in "${aliases_array[@]}"; do
-        # Verificar si el alias existe
-        if grep -q "^alias $alias_name=" "$alias_file"; then
-            sed -i "/^alias $alias_name=/d" "$alias_file"
-            echo -e "Alias ${verde}'$alias_name'${borra_colores} eliminado correctamente."
-        else
-            echo -e "${rojo}El alias '${alias_name}' no existe.${borra_colores}"
-        fi
-    done
-
-    echo ""
 }
 
 borrar_alias(){
