--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -161,8 +161,7 @@ if [ ! -f /home/$(whoami)/.bash_aliases ] || [ ! -s /home/$(whoami)/.bash_aliase
     echo ""
 else
     # Mostrar los aliases disponibles en .bash_aliases
-    echo -e " Listado de alias de $(whoami)."
-    echo -e "${azul}"
+    echo -e " Listado de alias de $(whoami).${azul}"
     cat /home/$(whoami)/.bash_aliases
     echo -e "${borra_colores}"
 fi
