--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -161,11 +161,11 @@ if [ ! -f /home/$(whoami)/.bash_aliases ] || [ ! -s /home/$(whoami)/.bash_aliase
     echo ""
 else
     # Mostrar los aliases disponibles en .bash_aliases
-    echo -e " Listado de alias de $(whoami).${azul}"
+    echo -e "${azul}"
     cat /home/$(whoami)/.bash_aliases
     echo -e "${borra_colores}"
 fi
-echo ""
+
 }
 
 
