--- a/alias_bashrc.config
+++ b/alias_bashrc.config
@@ -107,7 +107,7 @@ case $sn in
                 rm /home/$(whoami)/.bash_aliases >/dev/null 2>&1
                 echo -e ""
                 echo -e " Entrada source del .bashrc borrada = ${verde} SI ${borra_colores}"
-                echo -e " Fichero de configuracion alias_bashrc.congig borrado = ${verde}SI${borra_colores}"
+                echo -e " Fichero de configuracion alias_bashrc.config borrado = ${verde}SI${borra_colores}"
                 echo -e " Alias de tu usuario $(whoami) borradas = ${verde}SI${borra_colores}"
                 echo ""
                 echo -e "${verde} Desistalacion completada.${borra_colores}"
